# Bonzomatic-network

./: CMakeLists.txt  HOW_TO_RELEASE.md  README.md
.github/actions/release-version/: action.yml
.github/workflows/: build_release.yml  tag_release.yml
BonzoServer/: CMakeLists.txt  MakeBuild.bat
BonzoServer/src/: main.cpp
Launcher/: CMakeLists.txt  Launcher.sln  README.md
Launcher/Data/: Icons2bin.py
Launcher/Launcher/: Launcher.vcxproj  main.cpp
Launcher/src/: ControlWindow.cpp  ControlWindow.h  Instances.cpp  Instances.h  Network.cpp  Network.h  icons.h  main.cpp
data/extra/: README.md  config.json  font.raw
data/windows/: SetupDialog.aps  SetupDialog.rc  resource.h
package/common/: file_id.diz
src/: Capture.h  Cmdline.h  FFT.h  Misc.h  Network.h  NetworkSettings.h  Renderer.h  ShaderEditor.cpp  ShaderEditor.h  main.cpp
src/Network/: Network_Mongoose.cpp
src/capturing/: Capture_Dummy.cpp  Capture_NDI.cpp
src/platform_common/: FFT.cpp
src/platform_glfw/: Renderer.cpp
src/platform_osx/: Misc.mm  SetupDialog.cpp
src/platform_w32_common/: Misc.cpp  SetupDialog.cpp  Timer.cpp
src/platform_w32_dx11/: Renderer.cpp
src/platform_w32_dx9/: Renderer.cpp
src/platform_x11/: Misc.cpp  SetupDialog.cpp
